gitops/solution-services-routes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olympic-medals-app
  labels:
    app: olympic-medals-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: olympic-medals-app
  template:
    metadata:
      labels:
        app: olympic-medals-app
    spec:
      containers:
        - name: olympic-medals-app
          image: quay.io/neutron-it/olympic-medals-app:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "1m"
              memory: "32Mi"
            limits:
              cpu: "50m"
              memory: "32Mi"
