gitops/solution-services-routes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-svc
spec:
  selector:
    app: welcome-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
