gitops/solution-services-routes/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: olympic-medals-route
  labels:
    app: olympic-medals-app
spec:
  to:
    kind: Service
    name: olympic-medals-service
    weight: 100
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
